<resources>
    <string name="app_name">imseven</string>
    <string name="msg">消息</string>
    <string name="discover">发现</string>
    <string name="more">更多</string>
    <string name="press_again_exit">再按一次退出</string>

    <!--最近会话-->
    <string name="draft">[草稿]</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="sticker">贴图</string>
    <string name="video">视频</string>
    <string name="set_conversation_to_top">置顶聊天</string>
    <string name="cancel_conversation_to_top">取消置顶</string>
    <string name="delete_conversation">删除该聊天</string>

    <!--联系人-->
    <string name="new_friend">新的朋友</string>
    <string name="group_cheat">群聊</string>
    <string name="group_tag">标签</string>
    <string name="group_public_number">公众号</string>
    <string name="load_contacts_error">加载联系人失败</string>
    <string name="count_of_contacts">%1$d位联系人</string>

    <string name="auther">昵称</string>
    <string name="email">个性签名</string>


    <string name="sign">好友动态</string>
    <string name="today_has_sign">(今日已签到)</string>
    <string name="receive_address">地址</string>
    <string name="my_agent">我的二维码名片</string>
    <string name="start_luck">觅见</string>
    <string name="set">设置</string>


    <string name="str_recorder_normal">按住说话</string>
    <string name="str_recorder_recording">松开结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>

    <string name="album">相册</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="live_video">视频</string>
    <string name="send">发送</string>
    <string name="please_to_talk">按住 说话</string>

    <string name="get_more_info_and_service">获取更多资讯和服务</string>
    <string name="public_number">公众号</string>
    <string name="create_group_with_near_friend">与身边的朋友进入同一个群聊</string>
    <string name="scan_qr_code_business_card">扫描二维码名片</string>
    <string name="phone_contacts">手机联系人</string>
    <string name="add_friend_from_contact">添加或邀请通讯录中的朋友</string>
    <string name="scan_one_scan">扫一扫</string>
    <string name="create_group_face_to_face">面对面建群</string>
    <string name="area">地区</string>
    <string name="signature">个签</string>
    <string name="add_to_contact">添加联系人</string>
    <string name="addfriend">好友请求</string>


    <!--新的朋友-->
    <string name="add_friend">添加朋友</string>
    <string name="no_recommend_friend">还没有推荐的朋友</string>
    <string name="no_recommend_friend_tip">你可以绑定手机/QQ账号，以便找到更多好友</string>
    <string name="add_phone_contact">添加手机联系人</string>
    <string name="agree_friend_fail">同意添加好友失败</string>

<!--    朋友圈-->
    <string name="translating">翻译中</string>
    <string name="translated">已翻译</string>

    <string name="app_drag_delete">拖动到此处删除</string>
    <string name="app_let_go_drag_delete">松手即可删除</string>

    <!--设置-->
    <string name="completeinfo">完善账户信息</string>
    <string name="do_not_disturb_mode">勿扰模式</string>
    <string name="chat">聊天</string>
    <string name="privacy">隐私</string>
    <string name="currency">通用</string>
    <string name="account_and_safe">账号与安全</string>
    <string name="about">关于</string>
    <string name="exit">退出登录</string>
    <string name="exit_account">退出当前账号</string>
    <string name="exit_app">关闭</string>
    <string name="help_feedback">帮助与反馈</string>
</resources>
