<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/gray">
        <Button
            android:id="@+id/btnSendFriendCircle"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_alignParentRight="true"

            android:background="@drawable/shape_user_info_send_msg"
            android:text="发布"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/left_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/app_color_transparent"
            android:padding="15dp"
            android:src="@drawable/picture_icon_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxEms="11"
            android:text="@string/app_name"
            android:textColor="@color/app_color_white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:clipChildren="false">

        <TextView
            android:id="@+id/tv_delete_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/app_color_red"
            android:drawableTop="@drawable/picture_icon_delete"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/app_drag_delete"
            android:textColor="@color/app_color_white"
            android:textSize="12sp"
            android:visibility="gone"
            tools:visibility="visible" />


        <EditText
            android:id="@+id/edit_text_circle_friend"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/msg" />

        <androidx.recyclerview.widget.RecyclerView
            android:background="@color/gray4"
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_circle_friend"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:overScrollMode="never" />


    </RelativeLayout>


</RelativeLayout>
