<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.quyuanjin.imseven.ui.view.wedgit.pullextend.PullExtendLayout

        android:id="@+id/pull_extend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <com.quyuanjin.imseven.ui.view.wedgit.pullextend.ExtendListHeader
            android:id="@+id/extend_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.core.widget.NestedScrollView

            android:id="@+id/mine_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@mipmap/bg_banner_my"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="137dp"
                        android:layout_height="137dp"
                        android:layout_centerInParent="true"
                        android:background="@mipmap/bg_avatar">

                        <ImageView
                            android:id="@+id/img_avatar"
                            android:layout_width="105dp"
                            android:layout_height="105dp"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY"
                            android:src="@mipmap/dft_avatar" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            style="@style/text_white"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/auther"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_fans"
                            style="@style/text_white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp"
                            android:text="@string/email"
                            android:textSize="13sp" />
                    </LinearLayout>

                </RelativeLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="@color/bg_main" />

                    <LinearLayout
                        android:id="@+id/lay_sign"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:background="@mipmap/ic_sign" />

                        <TextView
                            style="@style/text_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="17dp"
                            android:text="@string/sign" />

                        <TextView
                            android:id="@+id/tv_has_sign"
                            style="@style/text_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="1"
                            android:text="@string/today_has_sign"
                            android:textColor="@color/gray_dft"
                            android:textSize="13sp"
                            android:visibility="invisible" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:background="@mipmap/ic_right_gray" />
                    </LinearLayout>

                    <View
                        style="@style/horizontal_divider_light"
                        android:layout_marginLeft="16dp" />

                    <LinearLayout
                        android:id="@+id/lay_new_friend"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:background="@mipmap/ic_address" />

                        <TextView
                            style="@style/text_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="17dp"
                            android:layout_weight="1"
                            android:text="@string/addfriend" />
                        <ImageView
                            android:id="@+id/unread_add_friend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:background="@mipmap/bg_unread" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:background="@mipmap/ic_right_gray" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="@color/bg_main" />

                    <LinearLayout
                        android:id="@+id/lay_agent"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:background="@mipmap/ic_agent_my" />

                        <TextView
                            style="@style/text_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="17dp"
                            android:layout_weight="1"
                            android:text="@string/my_agent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:background="@mipmap/ic_right_gray" />
                    </LinearLayout>



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="@color/bg_main" />

                    <LinearLayout
                        android:id="@+id/lay_luck"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:background="@mipmap/ic_luck_my" />

                        <TextView
                            style="@style/text_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="17dp"
                            android:layout_weight="1"
                            android:text="@string/start_luck" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:background="@mipmap/ic_right_gray" />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="@color/bg_main" />

                    <LinearLayout
                        android:id="@+id/lay_set"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:background="@mipmap/ic_set_my" />

                        <TextView
                            style="@style/text_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="17dp"
                            android:layout_weight="1"
                            android:text="@string/set" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:background="@mipmap/ic_right_gray" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:background="@color/bg_main" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


<!--       <com.quyuanjin.imseven.ui.view.wedgit.pullextend.ExtendListFooter-->
<!--            android:id="@+id/extend_footer"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="250dp" />-->

    </com.quyuanjin.imseven.ui.view.wedgit.pullextend.PullExtendLayout>
</LinearLayout>


