<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <!--内容-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:background="@drawable/selector_common_item"
            android:padding="20px">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/ivHeader1"
                android:layout_width="120px"
                android:layout_height="120px"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                fresco:placeholderImage="@color/assist_blue"
                fresco:roundedCornerRadius="15dp"
                fresco:actualImageScaleType="centerCrop"
                fresco:placeholderImageScaleType="focusCrop"
                fresco:failureImageScaleType="focusCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6px"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvName5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20px"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text=" "
                        android:textColor="@color/gray0"
                        android:textSize="15sp"/>

                    <ImageView
                        android:id="@+id/ivGender"
                        android:layout_width="30px"
                        android:layout_height="30px"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_gender_female"
                         />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAccount5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/gray2"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tvNickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6px"
                    android:singleLine="true"
                    android:text="个性签名"
                    android:textColor="@color/gray2"
                    android:textSize="12sp"/>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llArea"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="40px"
            android:background="@drawable/selector_common_item"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="1.5"
                android:text="@string/area"
                android:textColor="@color/black0"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvArea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="4"
                android:textColor="@color/gray1"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            style="@style/Line"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            />

        <LinearLayout
            android:id="@+id/llSignature"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:background="@drawable/selector_common_item"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="1"
                android:text="@string/signature"
                android:textColor="@color/black0"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvSignature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="4"
                android:textColor="@color/gray1"
                android:textSize="16sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnAddFriend"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginBottom="40px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_marginTop="40px"
            android:background="@drawable/shape_user_info_send_msg"
            android:text="加好友"
            android:textColor="@color/white"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/btnAddToContact"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginBottom="40px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_marginTop="40px"
            android:background="@drawable/shape_user_info_add_to_contact"
            android:text="@string/add_to_contact"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"/>
    </LinearLayout>

</FrameLayout>